# mmux_python

./: .gitignore  .pre-commit-config.yaml  BiphasicPulses.csv  Makefile  README.md  SinusoidPulses.csv  TechnicalDakotaIssues.md  flask_workflows.py  gitlab-ci.yml  pyproject.toml  requirements-dev.txt  requirements.txt  runner_optistim.env  runner_spinal.env  setup.cfg  sumo_visualization_nih.py
apps/: run_setup.sh  setup_ui.py  styles.py
data/: results_FULL_75LHS_TitrationProcessed.csv
runs/dakota_20250212.20090512_opt_goodrun/: get_pulse.py  main.py  stimulation_pulse.py
runs/dakota_20250212.20090512_opt_goodrun_OptiStim/: evaluation.py
runs/models/: NIH_SuMo.log_Thermal_Peak_Overall.sps  NIH_SuMo.log_Thermal_Peak_Overall.sps.json
scripts/: create_evaluation_optistim.py  create_inset_plots.py  create_optimization_optistim.py  create_sampling_optistim.py  create_sumo_optimization_optistim.py  regen_plot.py
scripts/NIHinSilico/: nih_utils.py  sumo_visualization_nih.py  uq_propagation_nih.py
scripts/PulseOptimizationSpinal/: create_evaluation_sinusoids_spinal.py  create_evaluation_spinal.py  create_optimization_sinusoids_spinal.py  create_optimization_spinal.py  create_sampling_sinusoids_spinal.py  create_sampling_spinal.py  profiling_spinal.py  typical_test_pulse.txt  typical_test_pulse_scaled_-1.txt  utils_spinal.py
src/mmux_python/: dakota_object.py  dakota_object_map.py  funs_create_dakota_conf.py  funs_data_processing.py  funs_evaluate.py  funs_git.py  funs_plotting.py  lhs.py  wiofiles.py
tests/test_apps/: test_setup_ui.py
tests/test_scripts/: dakota_sampling.in  test_dakota_evaluation.py  test_function_evaluation.py
tests/test_utils/: test_funs_git.py
utils/: dakota_object.py  dakota_object_map.py  funs_create_dakota_conf.py  funs_data_processing.py  funs_evaluate.py  funs_git.py  funs_plotting.py  lhs.py  wiofiles.py
